dynamo_parser/generated/org/sdxchange/dynamo/parser4/DynamoParser.java
// Generated from DynamoParser.g4 by ANTLR 4.4

package org.sdxchange.dynamo.parser4;



import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DynamoParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TABFUNC=43, PRTPER=40, LT=34, INITCARD=7, BUILTIN=42, MINUS=31, DT=37, 
		MAXLEN=41, ID=45, PRINTCARD=15, MENDCARD=17, INTEGER=46, NEWLINE=1, ENDCMT=51, 
		RATECARD=6, LPAREN=24, DOT=48, JKL=44, RPAREN=25, CARET=29, ENDEQN=22, 
		PLOTCARD=14, CONTINUATION=2, CONSTCARD=4, INDEXCARD=9, PLUS=30, FNUM=23, 
		LENGTH=38, SPECCARD=11, AUXCARD=3, RUNCARD=13, ENDCARD=21, COMMENT=50, 
		MACROCARD=16, TBLCARD=8, INTRNCARD=18, WS=47, FORCARD=10, COMMA=49, EQUAL=33, 
		NOTECARD=12, SLASH=32, LBRACKET=26, RBRACKET=27, GT=35, OTHER=36, STAR=28, 
		STARCARD=19, CONTINUATION2=20, LVLCARD=5, PLTPER=39;
	public static final String[] tokenNames = {
		"<INVALID>", "NEWLINE", "CONTINUATION", "AUXCARD", "CONSTCARD", "LVLCARD", 
		"RATECARD", "INITCARD", "TBLCARD", "INDEXCARD", "FORCARD", "SPECCARD", 
		"NOTECARD", "RUNCARD", "PLOTCARD", "PRINTCARD", "MACROCARD", "MENDCARD", 
		"INTRNCARD", "STARCARD", "CONTINUATION2", "ENDCARD", "ENDEQN", "FNUM", 
		"'('", "')'", "'['", "']'", "'*'", "'^'", "'+'", "'-'", "'/'", "'='", 
		"'<'", "'>'", "OTHER", "'DT'", "'LENGTH'", "'PLTPER'", "'PRTPER'", "'MAXLEN'", 
		"BUILTIN", "TABFUNC", "JKL", "ID", "INTEGER", "WS", "'.'", "','", "COMMENT", 
		"ENDCMT"
	};
	public static final int
		RULE_t = 0, RULE_model = 1, RULE_modelCard = 2, RULE_eqnCard = 3, RULE_expCard = 4, 
		RULE_arrayDecl = 5, RULE_indexDecl = 6, RULE_aryBounds = 7, RULE_aliasList = 8, 
		RULE_endCard = 9, RULE_starCard = 10, RULE_commentCard = 11, RULE_specCard = 12, 
		RULE_specAssign = 13, RULE_specId = 14, RULE_plotCard = 15, RULE_printCard = 16, 
		RULE_rptList = 17, RULE_plotList = 18, RULE_rptSpec = 19, RULE_columnNum = 20, 
		RULE_plotSpec = 21, RULE_plotChar = 22, RULE_bounds = 23, RULE_runCard = 24, 
		RULE_separator = 25, RULE_numLit = 26, RULE_macro = 27, RULE_macroDef = 28, 
		RULE_internDef = 29, RULE_localList = 30, RULE_dummyList = 31, RULE_auxDef = 32, 
		RULE_constDef = 33, RULE_initDef = 34, RULE_rateDef = 35, RULE_stockDef = 36, 
		RULE_tableDef = 37, RULE_yValues = 38, RULE_comment = 39, RULE_eqn = 40, 
		RULE_varRef = 41, RULE_expr = 42, RULE_tabRef = 43, RULE_arrayRef = 44, 
		RULE_indexList = 45, RULE_predefinedVar = 46, RULE_implicitMultExpr = 47, 
		RULE_powerOp = 48, RULE_timeScript = 49, RULE_funcRef = 50, RULE_macroRef = 51, 
		RULE_exprList = 52;
	public static final String[] ruleNames = {
		"t", "model", "modelCard", "eqnCard", "expCard", "arrayDecl", "indexDecl", 
		"aryBounds", "aliasList", "endCard", "starCard", "commentCard", "specCard", 
		"specAssign", "specId", "plotCard", "printCard", "rptList", "plotList", 
		"rptSpec", "columnNum", "plotSpec", "plotChar", "bounds", "runCard", "separator", 
		"numLit", "macro", "macroDef", "internDef", "localList", "dummyList", 
		"auxDef", "constDef", "initDef", "rateDef", "stockDef", "tableDef", "yValues", 
		"comment", "eqn", "varRef", "expr", "tabRef", "arrayRef", "indexList", 
		"predefinedVar", "implicitMultExpr", "powerOp", "timeScript", "funcRef", 
		"macroRef", "exprList"
	};

	@Override
	public String getGrammarFileName() { return "DynamoParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DynamoParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class TContext extends ParserRuleContext {
		public ModelContext model() {
			return getRuleContext(ModelContext.class,0);
		}
		public StarCardContext starCard() {
			return getRuleContext(StarCardContext.class,0);
		}
		public EndCardContext endCard() {
			return getRuleContext(EndCardContext.class,0);
		}
		public List<MacroContext> macro() {
			return getRuleContexts(MacroContext.class);
		}
		public MacroContext macro(int i) {
			return getRuleContext(MacroContext.class,i);
		}
		public TContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_t; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitT(this);
		}
	}

	public final TContext t() throws RecognitionException {
		TContext _localctx = new TContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_t);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_la = _input.LA(1);
			if (_la==STARCARD) {
				{
				setState(106); starCard();
				setState(107); endCard();
				}
			}

			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MACROCARD) {
				{
				{
				setState(111); macro();
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117); model();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelContext extends ParserRuleContext {
		public ModelCardContext modelCard(int i) {
			return getRuleContext(ModelCardContext.class,i);
		}
		public List<ExpCardContext> expCard() {
			return getRuleContexts(ExpCardContext.class);
		}
		public EndCardContext endCard(int i) {
			return getRuleContext(EndCardContext.class,i);
		}
		public List<ModelCardContext> modelCard() {
			return getRuleContexts(ModelCardContext.class);
		}
		public ExpCardContext expCard(int i) {
			return getRuleContext(ExpCardContext.class,i);
		}
		public List<EndCardContext> endCard() {
			return getRuleContexts(EndCardContext.class);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitModel(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AUXCARD) | (1L << CONSTCARD) | (1L << LVLCARD) | (1L << RATECARD) | (1L << INITCARD) | (1L << TBLCARD) | (1L << INDEXCARD) | (1L << FORCARD) | (1L << SPECCARD) | (1L << NOTECARD) | (1L << RUNCARD) | (1L << PLOTCARD) | (1L << PRINTCARD))) != 0)) {
				{
				{
				setState(121);
				switch (_input.LA(1)) {
				case AUXCARD:
				case CONSTCARD:
				case LVLCARD:
				case RATECARD:
				case INITCARD:
				case TBLCARD:
				case INDEXCARD:
				case FORCARD:
				case NOTECARD:
					{
					setState(119); modelCard();
					}
					break;
				case SPECCARD:
				case RUNCARD:
				case PLOTCARD:
				case PRINTCARD:
					{
					setState(120); expCard();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(123); endCard();
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelCardContext extends ParserRuleContext {
		public CommentCardContext commentCard() {
			return getRuleContext(CommentCardContext.class,0);
		}
		public EqnCardContext eqnCard() {
			return getRuleContext(EqnCardContext.class,0);
		}
		public ModelCardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelCard; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterModelCard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitModelCard(this);
		}
	}

	public final ModelCardContext modelCard() throws RecognitionException {
		ModelCardContext _localctx = new ModelCardContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_modelCard);
		try {
			setState(132);
			switch (_input.LA(1)) {
			case AUXCARD:
			case CONSTCARD:
			case LVLCARD:
			case RATECARD:
			case INITCARD:
			case TBLCARD:
			case INDEXCARD:
			case FORCARD:
				enterOuterAlt(_localctx, 1);
				{
				setState(130); eqnCard();
				}
				break;
			case NOTECARD:
				enterOuterAlt(_localctx, 2);
				{
				setState(131); commentCard();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqnCardContext extends ParserRuleContext {
		public EqnCardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eqnCard; }
	 
		public EqnCardContext() { }
		public void copyFrom(EqnCardContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LVL_EQNContext extends EqnCardContext {
		public StockDefContext stockDef() {
			return getRuleContext(StockDefContext.class,0);
		}
		public LVL_EQNContext(EqnCardContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterLVL_EQN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitLVL_EQN(this);
		}
	}
	public static class AUX_EQNContext extends EqnCardContext {
		public AuxDefContext auxDef() {
			return getRuleContext(AuxDefContext.class,0);
		}
		public AUX_EQNContext(EqnCardContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterAUX_EQN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitAUX_EQN(this);
		}
	}
	public static class IDX_DECContext extends EqnCardContext {
		public IndexDeclContext indexDecl() {
			return getRuleContext(IndexDeclContext.class,0);
		}
		public IDX_DECContext(EqnCardContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterIDX_DEC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitIDX_DEC(this);
		}
	}
	public static class RATE_EQNContext extends EqnCardContext {
		public RateDefContext rateDef() {
			return getRuleContext(RateDefContext.class,0);
		}
		public RATE_EQNContext(EqnCardContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterRATE_EQN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitRATE_EQN(this);
		}
	}
	public static class TBL_EQNContext extends EqnCardContext {
		public TableDefContext tableDef() {
			return getRuleContext(TableDefContext.class,0);
		}
		public TBL_EQNContext(EqnCardContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterTBL_EQN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitTBL_EQN(this);
		}
	}
	public static class INIT_EQNContext extends EqnCardContext {
		public InitDefContext initDef() {
			return getRuleContext(InitDefContext.class,0);
		}
		public INIT_EQNContext(EqnCardContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterINIT_EQN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitINIT_EQN(this);
		}
	}
	public static class CONST_EQNContext extends EqnCardContext {
		public ConstDefContext constDef() {
			return getRuleContext(ConstDefContext.class,0);
		}
		public CONST_EQNContext(EqnCardContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterCONST_EQN(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitCONST_EQN(this);
		}
	}
	public static class ARY_DECContext extends EqnCardContext {
		public ArrayDeclContext arrayDecl() {
			return getRuleContext(ArrayDeclContext.class,0);
		}
		public ARY_DECContext(EqnCardContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterARY_DEC(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitARY_DEC(this);
		}
	}

	public final EqnCardContext eqnCard() throws RecognitionException {
		EqnCardContext _localctx = new EqnCardContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_eqnCard);
		try {
			setState(142);
			switch (_input.LA(1)) {
			case AUXCARD:
				_localctx = new AUX_EQNContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(134); auxDef();
				}
				break;
			case CONSTCARD:
				_localctx = new CONST_EQNContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(135); constDef();
				}
				break;
			case INITCARD:
				_localctx = new INIT_EQNContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(136); initDef();
				}
				break;
			case RATECARD:
				_localctx = new RATE_EQNContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(137); rateDef();
				}
				break;
			case LVLCARD:
				_localctx = new LVL_EQNContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(138); stockDef();
				}
				break;
			case TBLCARD:
				_localctx = new TBL_EQNContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(139); tableDef();
				}
				break;
			case INDEXCARD:
				_localctx = new IDX_DECContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(140); indexDecl();
				}
				break;
			case FORCARD:
				_localctx = new ARY_DECContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(141); arrayDecl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpCardContext extends ParserRuleContext {
		public SpecCardContext specCard() {
			return getRuleContext(SpecCardContext.class,0);
		}
		public PrintCardContext printCard() {
			return getRuleContext(PrintCardContext.class,0);
		}
		public RunCardContext runCard() {
			return getRuleContext(RunCardContext.class,0);
		}
		public PlotCardContext plotCard() {
			return getRuleContext(PlotCardContext.class,0);
		}
		public ExpCardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expCard; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterExpCard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitExpCard(this);
		}
	}

	public final ExpCardContext expCard() throws RecognitionException {
		ExpCardContext _localctx = new ExpCardContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_expCard);
		try {
			setState(148);
			switch (_input.LA(1)) {
			case SPECCARD:
				enterOuterAlt(_localctx, 1);
				{
				setState(144); specCard();
				}
				break;
			case RUNCARD:
				enterOuterAlt(_localctx, 2);
				{
				setState(145); runCard();
				}
				break;
			case PRINTCARD:
				enterOuterAlt(_localctx, 3);
				{
				setState(146); printCard();
				}
				break;
			case PLOTCARD:
				enterOuterAlt(_localctx, 4);
				{
				setState(147); plotCard();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArrayDeclContext extends ParserRuleContext {
		public AliasListContext aliasList() {
			return getRuleContext(AliasListContext.class,0);
		}
		public TerminalNode ID() { return getToken(DynamoParser.ID, 0); }
		public List<TerminalNode> EQUAL() { return getTokens(DynamoParser.EQUAL); }
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TerminalNode EQUAL(int i) {
			return getToken(DynamoParser.EQUAL, i);
		}
		public AryBoundsContext aryBounds() {
			return getRuleContext(AryBoundsContext.class,0);
		}
		public TerminalNode FORCARD() { return getToken(DynamoParser.FORCARD, 0); }
		public ArrayDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterArrayDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitArrayDecl(this);
		}
	}

	public final ArrayDeclContext arrayDecl() throws RecognitionException {
		ArrayDeclContext _localctx = new ArrayDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150); match(FORCARD);
			setState(151); match(ID);
			setState(152); match(EQUAL);
			setState(153); aryBounds();
			setState(156);
			_la = _input.LA(1);
			if (_la==EQUAL) {
				{
				setState(154); match(EQUAL);
				setState(155); aliasList();
				}
			}

			setState(159);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(158); comment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IndexDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DynamoParser.ID, 0); }
		public TerminalNode EQUAL() { return getToken(DynamoParser.EQUAL, 0); }
		public TerminalNode INTEGER() { return getToken(DynamoParser.INTEGER, 0); }
		public TerminalNode INDEXCARD() { return getToken(DynamoParser.INDEXCARD, 0); }
		public IndexDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_indexDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterIndexDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitIndexDecl(this);
		}
	}

	public final IndexDeclContext indexDecl() throws RecognitionException {
		IndexDeclContext _localctx = new IndexDeclContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_indexDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(161); match(INDEXCARD);
			setState(162); match(ID);
			setState(163); match(EQUAL);
			setState(164); match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AryBoundsContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DynamoParser.ID, 0); }
		public List<TerminalNode> INTEGER() { return getTokens(DynamoParser.INTEGER); }
		public TerminalNode COMMA() { return getToken(DynamoParser.COMMA, 0); }
		public TerminalNode INTEGER(int i) {
			return getToken(DynamoParser.INTEGER, i);
		}
		public AryBoundsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aryBounds; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterAryBounds(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitAryBounds(this);
		}
	}

	public final AryBoundsContext aryBounds() throws RecognitionException {
		AryBoundsContext _localctx = new AryBoundsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_aryBounds);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166); match(INTEGER);
			setState(167); match(COMMA);
			setState(168);
			_la = _input.LA(1);
			if ( !(_la==ID || _la==INTEGER) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AliasListContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DynamoParser.ID); }
		public List<TerminalNode> COMMA() { return getTokens(DynamoParser.COMMA); }
		public TerminalNode ID(int i) {
			return getToken(DynamoParser.ID, i);
		}
		public TerminalNode COMMA(int i) {
			return getToken(DynamoParser.COMMA, i);
		}
		public AliasListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aliasList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterAliasList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitAliasList(this);
		}
	}

	public final AliasListContext aliasList() throws RecognitionException {
		AliasListContext _localctx = new AliasListContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_aliasList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170); match(ID);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(171); match(COMMA);
				setState(172); match(ID);
				}
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndCardContext extends ParserRuleContext {
		public TerminalNode ENDCMT() { return getToken(DynamoParser.ENDCMT, 0); }
		public TerminalNode ENDCARD() { return getToken(DynamoParser.ENDCARD, 0); }
		public EndCardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endCard; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterEndCard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitEndCard(this);
		}
	}

	public final EndCardContext endCard() throws RecognitionException {
		EndCardContext _localctx = new EndCardContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_endCard);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			_la = _input.LA(1);
			if ( !(_la==ENDCARD || _la==ENDCMT) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StarCardContext extends ParserRuleContext {
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public TerminalNode STARCARD() { return getToken(DynamoParser.STARCARD, 0); }
		public StarCardContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_starCard; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).enterStarCard(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DynamoParserListener ) ((DynamoParserListener)listener).exitStarCard(this);
		}
	}

	public final StarCardContext starCard() throws RecognitionException {
		StarCardContext _localctx = new StarCardContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_starCard);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180); match(STARCARD);
			setState(182);
			_la = _input.LA(1);
			if (_la==COMMENT) {
				{
				setState(181); comment();
				}
			}
